[project]
name = "agent-marketplace"
version = "0.4.0"
description = "Agent-to-Agent Data Marketplace - Trade cached computation results between AI agents"
requires-python = ">=3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["marketplace/tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
