[project]
name = "agent-marketplace"
version = "0.4.0"
description = "Agent-to-Agent Data Marketplace - Trade cached computation results between AI agents"
requires-python = ">=3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["marketplace/tests"]
markers = [
    "smoke: deployment smoke tests (require MARKETPLACE_URL env var)",
]
filterwarnings = [
    "ignore:JWT_SECRET_KEY is set to the default insecure value.*:UserWarning:marketplace\\.config",
    "ignore:datetime.datetime.utcnow\\(\\) is deprecated:DeprecationWarning:jose\\.jwt",
    "ignore:Usage of the 'Session.add\\(\\)' operation is not currently supported within the execution stage of the flush process.*:sqlalchemy.exc.SAWarning:marketplace\\.services\\.token_service",
    "ignore::pytest.PytestUnhandledThreadExceptionWarning",
]

[tool.ruff]
target-version = "py311"
line-length = 100
